<resources>
    <string name="app_name">Calculator</string>
    <string name="_AC">АС</string>
    <string name="_backspace">⌫</string>
    <string name="_percents">%</string>
    <string name="_divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_multiple">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_plus">+</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_equals">=</string>
    <string name="_minus">-</string>
    <string name="changeThemeButtonText">Change the theme</string>
    <string name="nightModeButtonText">Night</string>
    <string name="dayModeButtonText">Day</string>
    <string name="defaultThemeButtonText">Default (Follow system)</string>
    <string name="choseThemeText">Chose a Theme:</string>
    <string name="comeBackButtonText">come back</string>
</resources>