<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_ac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_AC"
            android:textSize="@dimen/_buttonsTextSize"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/button_backspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_backspace"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_percents"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_percents"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/_divide"
            android:textSize="@dimen/_buttonsTextSize" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_multiple"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/_multiple"
            android:textSize="@dimen/_buttonsTextSize" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/_minus"
            android:textSize="@dimen/_buttonsTextSize" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/_plus"
            android:textSize="@dimen/_buttonsTextSize" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="2.1"
            android:text="@string/_0"
            android:textSize="@dimen/_buttonsTextSize"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/button_point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"


            android:text="@string/_point"
            android:textSize="@dimen/_buttonsTextSize" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/_equals"
            android:textSize="@dimen/_buttonsTextSize" />
    </LinearLayout>
</LinearLayout>