<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeKeyboard"
    android:weightSum="5">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ac"
            style="@style/CutButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_AC"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_backspace"
            style="@style/CutButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_backspace" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_percents"
            style="@style/ActionButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_percents" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            style="@style/ActionButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_weight="1"
            android:text="@string/_divide" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiple"
            style="@style/ActionButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_weight="1"
            android:text="@string/_multiple" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            style="@style/ActionButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_weight="1"
            android:text="@string/_minus" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            style="@style/ActionButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_weight="1"
            android:text="@string/_plus" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="2.00"
            android:text="@string/_0"

            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:layout_weight="1"
            android:text="@string/_point" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equals"
            style="@style/ActionButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_weight="1"
            android:text="@string/_equals" />
    </TableRow>
</TableLayout>